Client/src/assets/styling/components/_generalStyling.scss
@use '../abstracts/colors' as *;
@use '../abstracts/fonts' as *;

.text-main {
  color: $text-main;
}

.text-secondary {
  color: $text-secondary;
}

.text-third {
  color: $text-third;
}

.text-disabled {
  color: $text-disabled;
}

.text-error-red {
  color: $text-error-red;
}

.text-active-blue {
  color: $el-active-blue;
}

.text-warning-orange {
  color: $el-warning-orange;
}

.el-white-main {
  background-color: $el-white-main;
}
.el-active-blue {
  background-color: $el-active-blue;
}
.el-active-blue-hover {
  background-color: $el-active-blue-hover;
}
.el-error-red {
  background-color: $el-error-red;
}
.el-warning-orange {
  background-color: $el-warning-orange;
}
.el-inactive-blue {
  background-color: $el-inactive-blue;
}
.el-inactive-gray {
  background-color: $el-inactive-gray;
}
.el-border-gray {
  border-color: $el-border-gray;
}
.el-border-gray-focus {
  border-color: $el-border-gray-focus;
}
.el-bg-gray {
  background-color: $el-bg-gray;
}

.gr-light-blue {
  background: $gr-light-blue;
}
.gr-dark-blue {
  background: $gr-dark-blue;
}

.bg-main {
  background-color: $bg-main;
}
.bg-main-90 {
  background-color: $bg-main-90;
}
.bg-secondary {
  background-color: $bg-secondary;
}

.t-b-gradient {
  background: -webkit-linear-gradient(#2c8be2, #0d31f1);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.font-title-black {
  font-family: map-get($font-title-black, font-family);
  font-weight: map-get($font-title-black, font-weight);
}

.font-title-bold {
  font-family: map-get($font-title-bold, font-family);
  font-weight: map-get($font-title-bold, font-weight);
}

.font-text-light {
  font-family: map-get($font-text-light, font-family);
  font-weight: map-get($font-text-light, font-weight);
}

p {
  font-size: 0.9rem;
}

.text-deco-none {
  text-decoration: none;
}

.list-style-none {
  list-style: none;
}

.text-align-left {
  text-align: left;
}

.text-align-center {
  text-align: center;
}

.O9rem {
  font-size: 0.9rem;
}

.O1rem {
  font-size: 1rem;
}

.O14rem {
  font-size: 1.4rem;
}

.O15rem {
  font-size: 1.5rem;
}

.O16rem {
  font-size: 1.6rem;
}

.O2rem {
  font-size: 2rem;
}

.O25rem {
  font-size: 2.5rem;
}

.O35rem {
  font-size: 3.5rem;
}

.width-100 {
  width: 100%;
}

.width-100vw {
  width: 100vw;
}

.m-width-100 {
  max-width: 100%;
}

.m-width-320px {
  max-width: 320px;
}

.m-width-1200px {
  max-width: 1200px;
}

.h-42px {
  height: 42px;
}

.m-h-42 {
  min-height: 42px;
}

.height-204px {
  height: 204px;
}

.height-219px {
  height: 219px;
}

.height-239px {
  height: 239px;
}

.height-100vh {
  height: 100vh;
}

.p-relative {
  position: relative;
}

.p-absolute {
  position: absolute;
}

.top-0 {
  top: 0;
}

.left-0 {
  left: 0;
}

.z-index-1 {
  z-index: 1;
}

.z-index-2 {
  z-index: 2;
}

.margin-au {
  margin: auto;
}

.margin-4-0 {
  margin: 4px 0;
}

.margin-16-0 {
  margin: 16px 0;
}

.margin-32-0 {
  margin: 32px 0;
}

.margin-tp-4 {
  margin-top: 4px;
}

.margin-tp-10 {
  margin-top: 10px;
}

.margin-tp-16 {
  margin-top: 16px;
}

.margin-tp-32 {
  margin-top: 32px;
}

.margin-top-n11 {
  margin-top: -11px;
}

.margin-tp-n100 {
  margin-top: -100px;
}

.margin-auto {
  margin: auto;
}

.margin-bm-16 {
  margin-bottom: 16px;
}

.margin-bm-22 {
  margin-bottom: 22px;
}

.margin-bm-24 {
  margin-bottom: 24px;
}

.margin-bm-32 {
  margin-bottom: 32px;
}

.padding-0 {
  padding: 0;
}

.padding-4 {
  padding: 4px;
}

.padding-6 {
  padding: 6px;
}

.padding-8 {
  padding: 8px;
}

.padding-16 {
  padding: 16px;
}

.padding-tp-105 {
  padding-top: 105px;
}

.padding-tp-137 {
  padding-top: 137px;
}

.padding-rt-16 {
  padding-right: 16px;
}

.padding-rt-32 {
  padding-right: 32px;
}

.padding-bm-0 {
  padding-bottom: 0;
}

.padding-lt-16 {
  padding-left: 16px;
}

.padding-lt-32 {
  padding-left: 16px;
}

.display-flex {
  display: flex;
}

.flex-dir-col {
  flex-direction: column;
}

.align-items-center {
  align-items: center;
}

.justify-center {
  justify-content: center;
}

.justify-between {
  justify-content: space-between;
}

.gap-4 {
  gap: 4px;
}

.gap-8 {
  gap: 8px;
}

.gap-16 {
  gap: 16px;
}

.gap-24 {
  gap: 24px;
}

.gap-32 {
  gap: 32px;
}

.gap-48 {
  gap: 48px;
}

.blue-line {
  width: 100%;
  height: 2px;
  background: linear-gradient(to right, #0d3ef100, #0d31f1, #0d3ef100);
  margin: auto;
}

.blue-line-mb-16 {
  max-width: 100vw;
  height: 2px;
  background: linear-gradient(to right, #0d3ef100, #0d31f1, #0d3ef100);
  margin: auto;
  margin-bottom: 16px;
}

.blue-line-mb-32 {
  max-width: 100vw;
  height: 2px;
  background: linear-gradient(to right, #0d3ef100, #0d31f1, #0d3ef100);
  margin: auto;
  margin-bottom: 32px;
}

.blue-line-mb-64 {
  max-width: 100vw;
  height: 2px;
  background: linear-gradient(to right, #0d3ef100, #0d31f1, #0d3ef100);
  margin: auto;
  margin-bottom: 32px;
}

.line-active {
  max-width: 100vw;
  height: 2px;
  background: linear-gradient(to right, #0d3ef100, #0d31f1, #0d3ef100);
  margin: auto;
  margin-top: 4px;
}

.line-inactive {
  max-width: 100vw;
  height: 2px;
  background-color: #353535;
  margin: auto;
  margin-top: 4px;
}

.width-100 {
  width: 100%;
}

.m-widt-1200 {
  max-width: 1200px;
}

//Borders
.border-2px-solid-el-border-gray {
  border: 2px solid $el-border-gray;
}

.b-r-10 {
  border-radius: 10px;
}

//Sizes
.resize-none {
  resize: none;
}

//Inputs

.textarea-input {
  width: 100%;
  padding: 8px;
  color: $text-main;
  border: 2px solid $el-border-gray;
  background-color: $el-bg-gray;
  border-radius: 10px;
  resize: none;
  font-family: map-get($font-text-light, font-family);
  font-weight: map-get($font-text-light, font-weight);
  font-size: 0.9rem;

  &:focus {
    transition: all 0.2s ease-in-out;
    outline: none;
    border: 2px solid transparent;
    background-image: linear-gradient($el-border-gray-focus, $el-border-gray-focus),
      linear-gradient(to bottom, rgb(13, 63, 241), rgb(13, 63, 241, 0.2));
    background-origin: border-box;
    background-clip: padding-box, border-box;
  }
}

.text-input {
  transition: all 0.2s ease-in-out;
  height: 42px;
  background-color: $el-bg-gray;
  color: $text-main;
  border: 2px solid $el-border-gray;
  border-radius: 10px;
  font-size: 0.9rem;

  &:focus {
    transition: all 0.2s ease-in-out;
    outline: none;
    border: 2px solid transparent;
    border-radius: 10px;
    background-image: linear-gradient($el-border-gray-focus, $el-border-gray-focus),
      linear-gradient(to bottom, rgb(13, 63, 241), rgb(13, 63, 241, 0.2));
    background-origin: border-box;
    background-clip: padding-box, border-box;
  }
}

.input-warning {
  transition: all 0.2s ease-in-out;
  height: 42px;
  background-color: $el-bg-gray;
  color: $text-main;
  border: 2px solid transparent;
  border-radius: 10px;
  font-size: 0.9rem;
  background-image: linear-gradient($el-border-gray-focus, $el-border-gray-focus),
    linear-gradient(to bottom, #f1550d, #f1550d5b);
  background-origin: border-box;
  background-clip: padding-box, border-box;

  &:focus {
    transition: all 0.2s ease-in-out;
    outline: none;
    border: 2px solid transparent;
    border-radius: 10px;
    background-image: linear-gradient($el-border-gray-focus, $el-border-gray-focus),
      linear-gradient(to bottom, #f1550d, #f1550d5b);
    background-origin: border-box;
    background-clip: padding-box, border-box;
  }
}

// Buttons
.btn-back {
  background: transparent;
  color: $text-main;
  width: 40px;
  height: 40px;
  border-radius: 12px;
  border: 2px solid $el-border-gray;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 0.9rem;

  &:focus,
  &:active,
  &:hover {
    cursor: pointer;
    color: $el-active-blue;
    border: 2px solid $el-active-blue;
  }
}

.main-btn {
  transition: all 0.2s ease-in-out;
  background-color: $el-active-blue;
  border: none;
  color: $text-main;
  font-family: map-get($font-title-bold, font-family);
  font-weight: map-get($font-title-bold, font-weight);
  font-size: 0.9rem;
  height: 42px;
  border-radius: 50px;
  width: 100%;

  &:hover {
    transition: all 0.2s ease-in-out;
    cursor: pointer;
    background-color: $el-active-blue-hover;
  }
}

.main-btn-disabled {
  transition: all 0.2s ease-in-out;
  background-color: $el-inactive-blue;
  border: none;
  font-size: 0.9rem;
  height: 42px;
  border-radius: 50px;
  width: 100%;
}

.btn-transparent {
  background: transparent;
  transition: all 0.2s ease-in-out;
  border-radius: 20px;
  background: transparent;
  border: none;
  text-align: center;

  &:hover {
    cursor: pointer;
    transition: all 0.2s ease-in-out;
    color: $el-active-blue;
  }
}

.show-more-btn {
  background: transparent;
  border: none;
  color: $text-main;
  position: absolute;
  border-bottom: 15px;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  text-align: right;

  &:hover {
    cursor: pointer;
    color: $el-active-blue;
  }
}

.outline-btn {
  transition: all 0.2s ease-in-out;
  padding: 2px 20px;
  border-radius: 20px;
  width: 100%;
  background: transparent;
  border: 2px solid $el-white-main;
  text-align: center;

  &:hover {
    cursor: pointer;
    transition: all 0.2s ease-in-out;
    border: 2px solid $el-active-blue;
  }
}

.filled-btn {
  transition: all 0.2s ease-in-out;
  padding: 2px 20px;
  border-radius: 20px;
  width: 100%;
  transition: all 0.2s ease-in-out;
  color: $text-secondary;
  border: none;

  &:hover {
    color: $text-main;
    transition: all 0.2s ease-in-out;
    background-color: $el-active-blue;
    cursor: pointer;
  }
}

// Visibility
.hide {
  visibility: none;
}

// Transitions
.All-02-e-i-o {
  transition: all 0.2s ease-in-out;
}

@media screen and (min-width: 700px) {
  .main-btn {
    font-size: 1rem;
  }
  .main-btn-disabled {
    font-size: 1rem;
  }

  p {
    font-size: 1rem;
  }
}

